Fixed styling content jumping and added compare function for comparing player and dealer card values

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,7 @@
     --suit-red: red;
     --suit-black: black;
     --grey-color: rgba(255, 255, 255, 0.25);
-}
-
-body {
-    padding: 0;
-    margin: 0;
+    --font-family: 'Ubuntu', sans-serif;
 }
 
 @keyframes throwCard {
@@ -22,23 +18,38 @@ body {
     to {opacity: 100%;}
 }
 
+body {
+    min-width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+p {
+    font-family: var(--font-family);
+    font-weight: bold;
+}
+
 #main-heading {
+    font-family: var(--font-family);
     font-size: 8rem;
     font-weight: 600;
     color: var(--title-color);
     background: black;
+    min-width: 100%;
     padding: 2%;
+    border-radius: 20px;
     box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.5);
 }
 
 .board {
     border-radius: 20px;
-    background: var(--bg-main-color);
+    background: rgb(111,199,55);
+    background: linear-gradient(175deg, rgb(79, 153, 33) 0%, rgba(20,78,0,1) 100%);
     box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 400px;
     padding: 1% 5% 7% 1%;
-    margin: auto 1rem;
+    margin: 1px 1rem;
 }
 
 .btn-primary {
@@ -46,7 +57,7 @@ body {
     border: none;
     width: 40px;
     height: 40px;
-    margin: 1% 1%;
+    margin: 1% 4px;
     text-align: center;
     border-radius: 50%;
 }
@@ -69,6 +80,7 @@ body {
 }
 
 .hand-text {
+    font-family: var(--font-family);
     font-size: 20px;
     color: var(--title-color);
 }
@@ -78,9 +90,22 @@ body {
     border-radius: 10px;
     height: 180px;
     width: 120px;
-    padding: 0;
-    margin: 1% 1%;
+    padding: 0px;
+    margin: 1% 4px;
     box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.25);
+    transition: ease 0.25s;
+}
+
+.card:hover {
+    float: left;
+    border-radius: 10px;
+    height: 180px;
+    width: 120px;
+    padding: 0px;
+    margin: 1% 4px;
+    border: solid 2px red;
+    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.25);
+    transition: ease 0.25s;
 }
 
 .rotate-l {
@@ -111,7 +136,7 @@ body {
     margin: auto;
 }
 
-.player-final-score {
+.player-option {
     width: 100%;
     margin: auto;
     text-align: center;
@@ -119,7 +144,10 @@ body {
 }
 
 .blackjack {
-    
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    color: var(--suit-black);
 }
 
 .btn-active {
@@ -127,6 +155,7 @@ body {
 }
 
 .new-game-text {
+    font-family: var(--font-family);
     font-size: 1.5rem;
 }
 
